# gridfleet

./: .dockerignore  .gitignore  .graphifyignore  .pre-commit-config.yaml  .release-please-config.json  .release-please-manifest.json  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  commitlint.config.js  package-lock.json  package.json
agent/: CHANGELOG.md  README.md  install.sh  pyproject.toml  uninstall.sh  update.sh
agent/agent_app/: __init__.py  _supervision.py  api_auth.py  appium_process.py  async_ttl_cache.py  capabilities.py  cli.py  config.py  driver_doctor.py  error_codes.py  grid_url.py  http_client.py  lifespan.py  main.py  observability.py  observation_token.py  plugin_manager.py  probes.py  reconfigure_handler.py  registration.py  status_push.py  terminal_ws.py  tool_paths.py  tool_utils.py  tools_manager.py
agent/agent_app/appium/: __init__.py  dependencies.py  exceptions.py  log_files.py  node_state.py  process.py  router.py  schemas.py
agent/agent_app/grid_node/: __init__.py  config.py  dependencies.py  event_bus.py  http_server.py  hub_registration.py  hub_status_cache.py  node_state.py  protocol.py  proxy.py  router.py  schemas.py  service.py  sidecar.py  stray_sweep.py  supervisor.py  upstream_pool.py
agent/agent_app/host/: capabilities.py  dependencies.py  hardware_info.py  router.py  schemas.py  telemetry.py  version_guidance.py
agent/agent_app/installer/: __init__.py  identity.py  install.py  plan.py  status.py  uninstall.py  update.py  uv_runtime.py
agent/agent_app/logs/: __init__.py  handlers.py  schemas.py  shipper.py
agent/agent_app/pack/: constants.py  (+24 more)
agent/tests/: conftest.py  test_adapter_utils.py  test_agent_api.py  test_agent_api_more.py  test_api_auth.py  test_appium_exceptions_module.py  test_appium_process.py  test_appium_process_port_alloc_race.py  test_appium_process_post_session.py  test_appium_process_relay.py  test_appium_process_restart_stop_race.py  test_appium_process_stop_start_lock_race.py  test_appium_process_watch_stop_race.py  test_appium_router_dependency.py  test_async_ttl_cache.py  test_capabilities.py  test_capabilities_more.py  test_cli.py  test_config.py  test_config_runtime_root.py  test_docs_gating.py  test_driver_doctor.py  test_error_codes.py  test_exception_handlers.py  test_grid_node_reregister_route.py  test_hardware_info.py  test_host_router_dependencies.py  test_host_telemetry.py  test_install_script.py  test_lifespan.py  test_lifespan_adapter_loader.py  test_lifespan_watchdog.py  test_log_pipeline_lifespan.py  test_log_pipeline_wiring.py  test_log_ring_buffer.py  test_log_shipper_handler.py  test_log_shipper_task.py  test_main_more.py  test_main_thin.py  test_no_driver_imports.py  (+38 more)
backend/: .vulture_whitelist.py  CHANGELOG.md  Dockerfile  alembic.ini  docker-entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/app/: _pr_agent_smoke.py  agent_client.py  composition.py  config.py  database.py  dependencies.py  errors.py  health.py  main.py  metrics.py  metrics_recorders.py  middleware.py  observability.py  shutdown.py  type_defs.py
backend/scripts/: check_agent_schemas.py  generate_agent_schemas.py
backend/tests/: _import_graph_manifest.py  bench_instrumentation.py  conftest.py  helpers.py  test_admin_appium_nodes.py  test_agent_auth_contract.py  test_agent_auth_pool_threading.py  test_agent_circuit_breaker_settings.py  test_agent_client_outcomes.py  test_agent_error_code_parity.py  test_agent_http_pool.py  test_agent_operations.py  test_agent_operations_json_decode.py  test_agent_operations_more.py  test_agent_operations_pool_branch.py  test_agent_probe_result.py  test_agent_reconfigure_delivery.py  test_agent_schema_drift.py  test_agent_snapshot.py  test_alembic_appium_node_desired_state.py  test_alembic_desired_state_changed_eventtype.py  test_alembic_drop_appium_node_state.py  test_alembic_group_filters_reserved.py  test_appium_node_effective_state.py  test_appium_node_locking.py  test_appium_node_resource_claims_schema.py  test_appium_node_resource_service.py  test_appium_reconciler.py  test_appium_reconciler_agent_coverage_more.py  test_appium_reconciler_convergence.py  test_appium_reconciler_coverage_more.py  test_appium_reconciler_does_not_kill_verification_node.py  test_appium_reconciler_integration.py  test_appium_reconciler_more_paths.py  test_appium_resource_allocator.py  test_auth.py  test_auth_coverage_more.py  test_availability.py  test_availability_event_after_commit.py  test_background_loop_coverage_more.py  (+380 more)
e2e-examples/: README.md  pyproject.toml
e2e-examples/e2e_examples/: __init__.py  run_android_ci.py
e2e-examples/tests/: conftest.py  test_android_e2e.py  test_run_android_ci.py
relay-proxy/: Cargo.toml  README.md  pyproject.toml
relay-proxy/src/: activity.rs  classify.rs  main.rs  proxy.rs
relay-proxy/tests/: e2e.rs
router/: CHANGELOG.md  Cargo.toml  Dockerfile  README.md
router/src/: activity.rs  backend.rs  classify.rs  lib.rs  main.rs  metrics.rs  proxy.rs  routes.rs  tasks.rs  w3c.rs
router/tests/: backend_client.rs  e2e.rs
testkit/: CHANGELOG.md  README.md  pyproject.toml
testkit/examples/: __init__.py  _example_helpers.py  test_android_mobile_screenshot.py  test_android_tv_screenshot.py  test_firetv_screenshot.py  test_ios_simulator_screenshot.py  test_roku_screenshot.py  test_roku_sideload_screenshot.py  test_tvos_screenshot.py
testkit/gridfleet_testkit/: __init__.py  allocation.py  appium.py  catalog.py  client.py  config.py  device.py  driver.py  errors.py  pytest_plugin.py  run_lifecycle.py  session.py  sessions.py  types.py
testkit/tests/: test_allocation.py  test_appium.py  test_catalog.py  test_client.py  test_client_test_data.py  test_config.py  test_device.py  test_docs_contract.py  test_driver.py  test_driver_agnostic_guard.py  test_package_metadata.py  test_pytest_plugin.py  test_pytest_plugin_grid_run_id_injection.py  test_pytest_plugin_test_data.py  test_run_lifecycle.py  test_run_scoped_url.py  test_session.py  test_sessions.py  test_sessions_resolve_device_handle.py
(+2217 files in other folders)
