[build-system]
requires = ["hatchling>=1.29.0"]
build-backend = "hatchling.build"

[project]
name = "gridfleet-agent"
version = "0.5.0"
description = "GridFleet agent — runs on each host"
readme = "README.md"
license = "Apache-2.0"
authors = [{ name = "GridFleet contributors" }]
requires-python = ">=3.12"
keywords = ["appium", "gridfleet", "selenium", "testing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = [
    "fastapi==0.136.1",
    "uvicorn[standard]==0.46.0",
    "pydantic-settings==2.14.0",
    "httpx==0.28.1",
    "packaging>=26.2",
    "psutil==7.2.2",
]

[project.urls]
Homepage = "https://github.com/quidow/gridfleet"
Repository = "https://github.com/quidow/gridfleet"
Documentation = "https://github.com/quidow/gridfleet/tree/main/docs"
Issues = "https://github.com/quidow/gridfleet/issues"
Security = "https://github.com/quidow/gridfleet/security/advisories/new"

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.23",
    "pytest-cov>=6.0",
    "mypy>=1.20.2",
    "ruff>=0.15.12",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
strict = true
plugins = ["pydantic.mypy"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH", "RUF", "ANN", "PLC0415"]
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLC0415"]  # tests often need lazy imports for fixture and patch ordering

[tool.ruff.format]
quote-style = "double"

[tool.coverage.run]
source = ["agent_app"]

[tool.coverage.report]
fail_under = 90.0
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ ==",
]

[dependency-groups]
dev = [
    "respx>=0.23.1",
    "vulture>=2.16",
]

[project.scripts]
gridfleet-agent = "agent_app.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["agent_app"]
