[build-system]
requires = ["hatchling>=1.29.0"]
build-backend = "hatchling.build"

[project]
name = "gridfleet-agent"
version = "0.29.5"
description = "GridFleet agent — runs on each host"
readme = "README.md"
license = "Apache-2.0"
authors = [{ name = "GridFleet contributors" }]
requires-python = ">=3.14"
keywords = ["appium", "gridfleet", "selenium", "testing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
dependencies = [
    "fastapi==0.139.0",
    "uvicorn[standard]==0.50.0",
    "pydantic-settings==2.14.2",
    "httpx2==2.5.0",
    # httpcore probes for sniffio on its hot path with a bare `import sniffio`
    # fallback; without the package installed the import FAILS on every call,
    # and failed imports are never cached — each one re-runs importlib
    # find-spec with filesystem stats (~33.5 µs/call vs 0.25 µs installed,
    # ~19% of the agent's busy CPU under WebDriver command load).
    "sniffio>=1.3",
    "packaging>=26.2",
    "psutil==7.2.2",
    "websockets>=14",
]

[project.urls]
Homepage = "https://github.com/quidow/gridfleet"
Repository = "https://github.com/quidow/gridfleet"
Documentation = "https://github.com/quidow/gridfleet/tree/main/docs"
Issues = "https://github.com/quidow/gridfleet/issues"
Security = "https://github.com/quidow/gridfleet/security/advisories/new"

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.23",
    "mypy>=1.20.2",
    "ruff>=0.15.12",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "slow: tests that require external services such as Docker and real Selenium Hub",
]
addopts = ["-m", "not slow"]

[tool.mypy]
strict = true
plugins = ["pydantic.mypy"]

[tool.ruff]
target-version = "py314"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH", "RUF", "ANN", "PLC0415"]
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLC0415"]  # tests often need lazy imports for fixture and patch ordering
# AppiumProcessManager.start()'s signature is introspected at runtime via
# inspect.signature (see test_launch_spec_fields_match_start_parameters), which on
# Python 3.14 evaluates its annotations (PEP 649/749). Imports used only in those
# annotations must stay importable at module scope, so don't relocate them to
# TYPE_CHECKING.
"agent_app/appium/process.py" = ["TC001", "TC003"]

[tool.ruff.lint.flake8-type-checking]
# On Python 3.14 annotations are lazy (PEP 649), so ruff offers to move type-only
# imports into `if TYPE_CHECKING:`. Pydantic resolves model/settings field annotations
# at runtime when building the schema, and FastAPI resolves route-handler signatures via
# get_type_hints, so imports used in those annotations must stay at module scope.
runtime-evaluated-base-classes = [
    "pydantic.BaseModel",
    "pydantic_settings.BaseSettings",
]
runtime-evaluated-decorators = [
    "fastapi.APIRouter.get",
    "fastapi.APIRouter.post",
    "fastapi.APIRouter.put",
    "fastapi.APIRouter.patch",
    "fastapi.APIRouter.delete",
    "fastapi.APIRouter.websocket",
    "fastapi.APIRouter.head",
    "fastapi.APIRouter.options",
]

[tool.ruff.format]
quote-style = "double"

[dependency-groups]
dev = [
    "vulture>=2.16",
]

[project.scripts]
gridfleet-agent = "agent_app.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["agent_app"]
