[project]
name = "gridfleet-backend"
version = "0.3.0"
description = "GridFleet backend — FastAPI + SQLAlchemy"
license = "Apache-2.0"
authors = [{ name = "GridFleet contributors" }]
requires-python = ">=3.14"
dependencies = [
    "fastapi==0.138.0",
    "uvicorn[standard]==0.49.0",
    "sqlalchemy[asyncio]==2.0.51",
    "asyncpg==0.31.0",
    "pydantic-settings==2.14.2",
    "alembic==1.18.4",
    "greenlet==3.5.2",
    "httpx2==2.4.0",
    "sse-starlette==3.4.5",
    "prometheus-client==0.25.0",
    "structlog==26.1.0",
    "pyyaml==6.0.3",
    "packaging>=26.2",
    "python-multipart>=0.0.32",
    "tenacity>=9.0,<10",
    "PyJWT>=2.10,<3",
]

[project.urls]
Homepage = "https://github.com/quidow/gridfleet"
Repository = "https://github.com/quidow/gridfleet"
Documentation = "https://github.com/quidow/gridfleet/tree/main/docs"
Issues = "https://github.com/quidow/gridfleet/issues"
Security = "https://github.com/quidow/gridfleet/security/advisories/new"

[project.optional-dependencies]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-xdist>=3.6.0",
    "mypy>=2.1.0",
    "ruff>=0.15.18",
    "datamodel-code-generator==0.65.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "db: test uses the backend Postgres test database",
]

[tool.mypy]
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["alembic.*"]
ignore_errors = true

[[tool.mypy.overrides]]
module = "app.agent_comm.generated"
ignore_errors = true

[tool.ruff]
target-version = "py314"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "BLE", "SIM", "TC", "RUF", "ANN", "PLC0414", "PLC0415", "PLR0402", "PLR0911", "PLR0912", "PLR0913", "PLR0915", "PLR2004", "PLW0108"]
ignore = ["B008"]

[tool.ruff.lint.flake8-type-checking]
# Pydantic resolves model field annotations at runtime when building the schema, and
# SQLAlchemy resolves `Mapped[...]` column annotations at runtime when configuring
# mappers, so type-only imports used in those annotations must stay at module scope.
# Listing the base classes here is ruff's intended mechanism for this, instead of a
# per-import `# noqa: TC003` on every model. `app.core.database.Base` is the project's
# DeclarativeBase subclass that all ORM models inherit from. Models use
# `from __future__ import annotations`, so relationship-target annotations are already
# strings; exempting the base does NOT trigger TC004 on the `if TYPE_CHECKING:`
# relationship imports (verified).
runtime-evaluated-base-classes = [
    "pydantic.BaseModel",
    "pydantic_settings.BaseSettings",
    "app.core.database.Base",
]
# FastAPI evaluates endpoint signatures (Annotated deps, response types) at runtime via
# get_type_hints, so imports used in route-handler annotations must stay at module scope.
# Listing the APIRouter route decorators here is ruff's intended mechanism for this,
# instead of a blanket per-file TC ignore on router modules — it keeps TC checking active
# for genuinely type-only imports (protocols, helpers) elsewhere in those files.
runtime-evaluated-decorators = [
    "fastapi.APIRouter.get",
    "fastapi.APIRouter.post",
    "fastapi.APIRouter.put",
    "fastapi.APIRouter.patch",
    "fastapi.APIRouter.delete",
    "fastapi.APIRouter.websocket",
    "fastapi.APIRouter.head",
    "fastapi.APIRouter.options",
]

[tool.ruff.lint.pylint]
max-args = 8  # service constructors and DI-style helpers routinely take 6-8 cohesive params; anything over 8 must group into a dataclass

[tool.ruff.lint.per-file-ignores]
# tests: lazy imports for fixture/patch ordering; magic values (== 200, == 2) are idiomatic in assertions;
# long setup-heavy test bodies and many-arg fixtures/constructors are not a code smell.
"tests/**" = ["PLC0415", "PLR2004", "PLR0911", "PLR0912", "PLR0913", "PLR0915"]
"tests/packs/test_start_payload_integration.py" = ["ANN401"]  # *args/**kwargs shims need Any
"app/agent_comm/generated.py" = ["ALL"]  # auto-generated — do not lint
# PLR0913 structural exemptions — these arg counts cannot be reduced in isolation:
"app/**/router.py" = ["PLR0913"]       # FastAPI handlers: args are DI Depends() params
"app/**/routers/*.py" = ["PLR0913"]    # FastAPI handlers: args are DI Depends() params
"app/**/protocols.py" = ["PLR0913"]    # Protocol signatures mirror their implementations
"app/agent_comm/**" = ["PLR0913"]      # HTTP client wrappers pass request fields straight through

[tool.ruff.format]
quote-style = "double"

[dependency-groups]
dev = [
    "types-pyyaml>=6.0.12.20260518",
    "vulture>=2.16",
]
