[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "gridfleet-e2e-examples"
version = "0.1.0"
description = "Standalone GridFleet consumer examples and Android CI orchestration"
readme = "README.md"
license = "Apache-2.0"
authors = [{ name = "GridFleet contributors" }]
requires-python = ">=3.12"
dependencies = [
    "httpx==0.28.1",
]

[project.urls]
Homepage = "https://github.com/quidow/gridfleet"
Repository = "https://github.com/quidow/gridfleet"
Documentation = "https://github.com/quidow/gridfleet/tree/main/e2e-examples"
Issues = "https://github.com/quidow/gridfleet/issues"
Security = "https://github.com/quidow/gridfleet/security/advisories/new"

[project.optional-dependencies]
appium = [
    "gridfleet-testkit[appium]",
]
dev = [
    "mypy>=1.20.2",
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.uv.sources]
gridfleet-testkit = { path = "../testkit", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["e2e_examples"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m \"not e2e_hardware\""
markers = [
    "e2e_hardware: requires a real Android-capable host and GridFleet stack",
]

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = ["appium", "appium.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["gridfleet_testkit", "gridfleet_testkit.*"]
ignore_missing_imports = true

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH", "RUF"]
ignore = ["B008"]

[tool.ruff.format]
quote-style = "double"
