[package]
name = "gridfleet-relay-proxy"
version = "0.1.0"
edition = "2021"
description = "GridFleet grid-relay fast-lane sidecar: streams WebDriver session commands to Appium, forwards control-plane requests to the agent's Python relay"
license = "Apache-2.0"

[dependencies]
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
pingora = { version = "0.8", default-features = false, features = ["proxy", "rustls"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
serde_json = "1"

[dev-dependencies]
ureq = "2"
