[build-system]
requires = ["hatchling>=1.29.0"]
build-backend = "hatchling.build"

[project]
name = "gridfleet-testkit"
version = "0.9.2"
description = "Supported pytest and run-orchestration helpers for GridFleet integrations"
readme = "README.md"
license = "Apache-2.0"
authors = [{ name = "GridFleet contributors" }]
requires-python = ">=3.10,<3.15"
keywords = ["appium", "gridfleet", "pytest", "selenium", "testing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
dependencies = [
    "Appium-Python-Client>=4.5,<6",
    "httpx>=0.27,<1",
    "pytest>=9.0.3,<10",
]

[project.urls]
Homepage = "https://github.com/quidow/gridfleet"
Repository = "https://github.com/quidow/gridfleet"
Documentation = "https://github.com/quidow/gridfleet/tree/main/docs/reference/testkit.md"
Issues = "https://github.com/quidow/gridfleet/issues"
Security = "https://github.com/quidow/gridfleet/security/advisories/new"

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3,<10",
    "mypy>=1.20.2,<3",
    "ruff>=0.15.12,<1",
]

[project.entry-points.pytest11]
gridfleet = "gridfleet_testkit.pytest_plugin"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
strict = true
disallow_any_explicit = true

[[tool.mypy.overrides]]
module = [
    "test_allocation",
    "test_appium",
    "test_client",
    "test_pytest_plugin",
    "test_sessions",
]
disallow_untyped_defs = false
disallow_untyped_calls = false
disable_error_code = ["attr-defined", "arg-type", "var-annotated"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH", "RUF", "PLC0415"]
ignore = ["B008"]

[tool.ruff.format]
quote-style = "double"
