[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gridfleet-adapter-roku"
version = "0.1.0"
license = "Apache-2.0"
requires-python = ">=3.12"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["adapter"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = [".", "../../../agent"]
